Fix WYSIWYG overflow

--- a/frontend/src/app/box-canvas-page/components/text-box/text-box.component.scss
+++ b/frontend/src/app/box-canvas-page/components/text-box/text-box.component.scss
@@ -63,8 +63,7 @@
 
 .editor-wrap {
   width: 100%;
-  height: 100%;
-  margin: auto;
+  height: 89.35%;
 
   display: flex;
   flex-direction: row;
